src/app/container/jobs/components/job/job.component.css
.container{
    color:#4A4A4A;
    display: flex;
    justify-content: center;
    background: white;
    padding: 3%;
    max-width: 433px;
    border-radius: 8px;
    margin-bottom: 10%;
    -webkit-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    -moz-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);

}
.picture{
    /* display: flex;
    justify-content: center; */
}
.picture img{
    width:423px;
    height: 215px;
    margin-bottom: 30px;
    border-radius: 8px;
    -webkit-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    -moz-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
}
.job_wrapper{
    display: flex;
    flex-direction: column;
    margin-left: 10px;
}
.job_info{
    width: 300px;
    padding-top: 2%;

    /* border: 1px solid rgba(38, 41, 58, 0.1); */
    border-radius:8px;
    font-family: 'Open Sans', sans-serif;
    margin-bottom:10px; 
    /* box-shadow: 0 6px 3px 0 rgba(74,74,74,.06) */
}
.business_info{
}
.business_info .title{
    font-size: 1.4rem;
    color:#4A4A4A;
    font-weight: bolder;
}
.business_info .address{
    font-size: 1rem;
    color:#4A4A4A;
    font-weight: normal;
}
.record{
    display: grid;
    grid-template-columns: 1fr 1fr
}
.value{
    font-weight: normal;

}
.label{
    font-weight: 700;
}
.job_description{


}
.message{
    padding: 12px;
    height: 190px;
    width: 420px;
}

.apply button{

    background:#B400AE;
    font-family: 'Open Sans', sans-serif;
    color:white;
    font-size:1.5rem;
    border-radius:10px;

}
.apply{
    margin-top: 3%;
    margin-bottom: 4%;
    display: flex;
    justify-content: center;
}
agm-map{
    display: block;
    height: 230px;
    width: 423px;
}

.row-flexbox{
    display: flex;
}
.grid{
    display: grid;
     grid-template-columns: 1fr 1fr; 
     align-items: center;
    }

.close{
    font-size:2rem;
    color:#B400AE;
}
.close i{
    cursor: pointer;
}
.close{
    display: block
}
@media only screen 
 and (min-device-width : 1025px) {
     .close{
    display: none;
     }
}

    @media only screen 
and (min-device-width : 320px) 
and (max-device-width : 768px) {
  
    .container{
        color:#4A4A4A;
        display: flex;
        justify-content: center;
        background: white;
        padding: 3%;
        border-radius: 8px;
        margin-bottom: 10%;
        -webkit-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
        -moz-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
        box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    
    }
    .picture{
        display: flex;
        justify-content: center;
    }
    .picture img{
        width: 100%;
        height: 200px;
        margin-bottom: 30px;
        border-radius: 8px;
        -webkit-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
        -moz-box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
        box-shadow: -1px 2px 14px 2px rgba(189,189,189,0.36);
    }
    .map{
        display: flex;
        justify-content: center;
    }
    agm-map{
        display: block;
        height: 250px;
        width: 100%;
    }
    .apply{
        margin-bottom: 30px;
    }



}

